# gallery_app

./: LICENSE  README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cmakeLibs/: .gitignore
android/src/main/kotlin/com/example/flutter_opencv_plugin/: FlutterOpencvPlugin.kt
example/: README.md  pubspec.yaml
example/_shared/: pubspec.yaml
example/android/: build.gradle  gradle.properties
example/android/app/: build.gradle
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: add_app.dart  constants.dart  firebase_options.dart  global_vars.dart  main.dart  main_navigation)old.dart
example/lib/services/: ImageConfirmationScreen.dart  firebase_service.dart  firebase_storage_service.dart  local_storage_service.dart  opencv_service.dart
example/lib/widgets/: firebase_image_list.dart  image_preview.dart
example/lib/yolo/: camera_screen.dart  (+1 more)
example/linux/: CMakeLists.txt  my_application.cc
example/macos/: firebase_app_id_file.json
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
ios/: flutter_opencv_plugin.podspec
ios/Classes/: FlutterOpencvPlugin.swift  flutter_opencv.cpp  image_matcher.hpp  image_matcher_img_resize.hpp  logs.hpp  yolo.hpp  yuv2bgr.hpp
lib/: flutter_opencv_plugin.dart  flutter_opencv_plugin_method_channel.dart  flutter_opencv_plugin_platform_interface.dart
test/: flutter_opencv_plugin_method_channel_test.dart  flutter_opencv_plugin_test.dart
(+29 files in other folders)
